# trade-bot

./: .gitignore  .mcp.json  OVERNIGHT_RUNBOOK.md  OVERNIGHT_RUNBOOK_v1.md  OVERNIGHT_RUNBOOK_v2.md  PC_OPUS_HANDOFF.md  PC_SETUP.md  SESSION_CONTEXT.md  SETUP.md  docker-compose.yml
backend/: .env.example  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_bank_new20_train.py  run_ic_backtest.py  run_naked40_wf.py  run_phase4_bank.py
backend/agents/: adversary.py  agent_monitor.py  catalyst.py  circuit_breaker.py  compound_signals.py  cross_stock_context.py  graph.py  hooks.py  meta_researcher.py  output_models.py  position_monitor.py  postmortem.py  watchlist_agent.py
backend/analysis/: calendar.py  candles.py  chart_patterns.py  cross_section_job.py  dow_bias.py  earnings_adj_iv.py  engine.py  evaluate_predictions.py  fomc_drift.py  fundamental.py  gex_dex.py  greeks.py  insider_analyst_combo.py  insider_flow.py  ipo_halo.py  iv_analysis.py  lead_lag.py  liquidity.py  liquidity_gate.py  lt_scoring.py  macro.py  macro_ingest.py  momentum.py  options_chain.py  options_flow.py  reddit_sentiment.py  regime_classifier.py  regime_markov.py  risk.py  sentiment.py  short_interest_ingest.py  short_squeeze.py  stock_climate.py  stock_dna.py  support_resistance.py  trade_structure_analysis.py  trend.py  vol_surface.py  volatility_regime.py  whale_flow.py
backend/api/: auth_routes.py  briefing.py  discord_notify.py  freshness_check.py  health.py  lt_routes.py  optimizer.py  portfolio_import.py  postmortem.py  routes.py  signals.py  strategy.py
backend/backtest/: engine.py  equity_cache.py  equity_engine.py  fills.py  iv_inversion.py  liquid_universe.py  marketdata_source.py  metrics.py  portfolio_mtm.py  seed_data.py  selftest.py  stress_test.py  sweeper.py  synthetic_source.py  tests_synthetic.py
backend/core/: auth.py  config.py  database.py  redis_client.py
backend/data/: analyst_targets.py  cftc_cot.py  edgar_13f.py  fmp_cache.py  macro.py  macro_feeds.py  market.py  marketdata.py  news.py  political.py  reddit.py  scanner.py  thetadata.py  tradier.py  universe.py  validators.py
backend/db/: init.sql
backend/deploy/: README_daemons.md
backend/mcp_servers/: fmp_server.py  tradier_server.py
backend/scoring/: calibration.py  calibration_report.py  cross_section.py  ic_tracker.py  lt_sell_discipline.py  portfolio_construction.py  (+12 more)
(+2500 files in other folders)
