[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "options-trading-backend"
version = "0.1.0"
description = "Options trading algorithmic bot backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",

    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.3.0",

    # Task scheduling & caching
    "apscheduler>=3.10.4",
    "redis>=5.0.4",
    "hiredis>=2.3.2",

    # LLM & Agents
    "anthropic>=0.40.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.0.1",
    "langchain-community>=0.0.1",
    "openai>=1.30.0",             # for Ollama OpenAI-compatible endpoint

    # Market data
    "yfinance>=0.2.40",
    "pandas>=2.2.2",
    "numpy>=1.26.4",

    # Technical analysis
    "pandas-ta>=0.3.14b",
    "ta>=0.11.0",

    # Options pricing / Greeks
    "mibian>=0.1.3",
    "py-vollib>=1.0.1",
    "py-vollib-vectorized>=0.1",

    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.5",

    # News / feeds
    "feedparser>=6.0.11",

    # YouTube transcripts
    "youtube-transcript-api>=0.6.2",

    # Web scraping
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Config & env
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",

    # Utilities
    "tenacity>=8.3.0",
    "loguru>=0.7.2",
    "orjson>=3.10.3",
    "arrow>=1.3.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=25.3.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]
ml = [
    "torch>=2.3.0",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.5.0",
    "openai-whisper>=20231117",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["agents", "api", "analysis", "backtest", "core", "data", "db", "mcp_servers", "scoring", "scripts", "store", "tests"]
